--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 
 
     LazyLoad.js([
-        "lib/jquery.slim.min.js",
+        "lib/jquery.min.js",
         "lib/lodash.min.js",
         "util.js",
         "lib/slim.min.js",
         "lib/modernizr.min.js",
         "lib/pnotify.custom.min.js",
         'lib/dat.gui.min.js',
-        "lib/eventemitter3.min.js"
-    ], () => {
+        "lib/eventemitter3.min.js",
+        "lib/packery.pkgd.min.js"
+        ], () => {
 
         LazyLoad.js([
 
@@ -152,7 +153,7 @@
                 var messageBtn = $('<div id="home" class="nt-btn nt-view-btn" title="My Home"><i class="fa fa-2x fa-home"></i><span class="visuallyhidden">Homepage</span></div>').prependTo(rightMenu);
             }
 
-            //I.mem.add(new PouchDBMemory()); //Browser default, IndexedDB (probably)
+            I.mem.add(new PouchDBMemory()); //Browser default, IndexedDB (probably)
 
             //I.net.add( new PouchDBMemory( ((PouchDB)=>new PouchDB('dbname', {adapter: 'memory'})) ) ); //MemDown
 
@@ -161,22 +162,118 @@
                 "http://ana:5984/doc"
             ));
 
-            //I.mem.add(new SpimeDBMemory("http://localhost:8080"));
+            setTimeout(()=>{
+
+                I.mem.add(new SpimeDBMemory("http://localhost:8080"));
+
+            }, 4000);
 
 
-//            new CesiumView().build({}, D().appendTo('#view').attr('style', 'width: 30%; float: left'));
+
+            //new CesiumView().build({}, D().appendTo('#view').attr('style', 'width: 30%; float: left'));
 //            new SpaceGraphView().build({}, D().appendTo('#view').attr('style', 'width: 30%; float: left'));
+//            new TableView().build(I, VIEW).query("sseehh")
 
-            let VIEW = $('#view');
+            const VIEW = $('#view');
 
-            setTimeout(() =>
-                new TableView().build(I, VIEW).query("sseehh")
-            , 2000);
+            new Prompt(I, $('#find'));
+
+
+
+
 
             //new CesiumView().build(I, VIEW);
-            //new SpaceGraphView().build(I, VIEW);
+            new SpaceGraphView().build(I, VIEW);
         });
     });
+
+    /** manages the state of an input text prompt and its related pop-ups */
+    class Prompt {
+
+
+        constructor(I, ele) {
+            this.ele = ele;
+
+            const sugg = D(); //suggestions popup
+            sugg.attr('style', 'position: fixed; overflow-y: auto; min-width: 25%;min-height: 5em; margin: 0.5em; padding: 0.5em; max-height: 10em;max-width: 50%;opacity: 0.9;line-height: 1em;background-color: rgba(153, 153, 153, 0.55);');
+            sugg.attr('class', 'grid');
+            //sugg.attr('data-packery','{ "itemSelector": ".grid-item", "gutter": 10 }');
+            sugg.hide();
+            this.sugg = sugg;
+
+            const suggFeed = D();
+            suggFeed.attr('style', 'width: 100%;');
+            suggFeed.packery({
+                itemSelector: '.grid-item',
+                gutter: 5
+            });
+
+
+            let queryMinUpdatePeriodMS = 100;
+            const onQueryTextChanged = _.throttle(() => {
+
+                const q = ele.val();
+
+                suggFeed.html('');
+                if (q.length) {
+                    sugg.show();
+                } else {
+                    sugg.hide();
+                }
+
+                const update = _.debounce(()=>suggFeed.packery( 'appended' ), 100);
+
+                I.mem.get(q, (x)=>{
+
+                    const y = new NIcon(x).ele;
+
+                    suggFeed.append(y);
+                    update();
+                });
+
+                //$('#query_status').html('Suggesting: ' + qText);
+
+//                $.get('/suggest', {q: qText}, function (result) {
+//
+//                    if (!result.length) {
+//                        suggestions.html('');
+//                    } else {
+//                        suggestions.html(_.map((result), (x) =>
+//                            D('suggestion').text(x).click(() => {
+//                                ele.val(x);
+//                                update(x);
+//                            })
+//                        ));
+//                    }
+//                });
+            }, queryMinUpdatePeriodMS, true, true);
+
+            const querySubmit = () => {
+                var q = ele.val();
+                if (q = q.trim()) {
+                    //update(q);
+                    I.info("share: " + q);
+
+                    I.mem.put({
+                        I: 'x' + parseInt(10000000 * Math.random()), //TODO UUID
+                        N: q
+                    });
+                }
+            };
+
+            ele.on('input', onQueryTextChanged);
+
+            ele.on('keypress', (e) => {
+                if (e.keyCode === 13)
+                    querySubmit();
+            });
+
+            ele.after(sugg);
+            suggFeed.appendTo(sugg);
+
+        }
+
+    }
 
     //class DemoView  //TODO
 
@@ -188,6 +285,17 @@
 <link type="text/css" rel="stylesheet" href="/css/netention.css">
 <link type="text/css" rel="stylesheet" href="/css/netention-theme.css">
 <style>
+
+    .grid-item {
+        border: 1px solid purple;
+        margin: 2px;
+        padding: 2px;
+    }
+
+    .grid-item:hover {
+        border-color: white;
+        cursor: move;
+    }
 
     .cesium-widget-credits {
         display: none
