--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 }
             });
 
-            var viewMenu = $('#nt-view-menu .nt-btn-grp');
-            var rightMenu = $('#nt-right-menu .nt-btn-grp');
+            var viewMenu = $('#nt-view-menu').find('.nt-btn-grp');
+            var rightMenu = $('#nt-ri').find('.nt-btn-grp');
 
             // FEED
             if (I.IncludeFeed === true) {
@@ -264,8 +264,11 @@
             ele.on('input', onQueryTextChanged);
 
             ele.on('keypress', (e) => {
-                if (e.keyCode === 13)
-                    querySubmit();
+                let keyCode = e.keyCode;
+                switch (keyCode) {
+                    case 13: /* enter */ querySubmit(); break;
+                    case 27: /* escape */ ele.val(''); /* clear */ break;
+                }
             });
 
             ele.after(sugg);
@@ -331,7 +334,7 @@
     <div class="nt-btn-grp">
         <!-- AVATAR / MENU TOGGLE BUTTON -->
         <div id="nt-user" class="nt-btn nt-view-btn">
-            <img src="/img/netention-256.png" alt="Your Face Here">
+            <img src="/img/netention-256.png" alt="User.Icon">
         </div>
     </div>
 </div>
