--- a/index.html
+++ b/index.html
@@ -66,17 +66,6 @@
 <nav class='right animated bounceInDown'>
     <ul id="right-dropdown">
 
-        <!-- DARK / LIGHT THEME SWITCHER -->
-        <li id="theme-switcher">
-            <a href='#profile'>
-                <div class='fa fa-paint-brush'></div>
-                Theme 
-                 <label class="badge right switch">
-                  <input type="checkbox">
-                  <div class="slider"></div>
-                </label>
-            </a>
-        </li> 
         <li id="profile-link">
             <a href='#profile'>
                 <div class='fa fa-user'></div>
@@ -87,9 +76,27 @@
             <a href='#settings'>
                 <div class='fa fa-gear'></div>
                 Settings
-                <div class='fa fa-caret-down right'></div>
+                <div class='fa fa-caret-up right'></div>
             </a>
             <ul>
+                <!-- DARK / LIGHT THEME SWITCHER -->
+                <li id="theme-switcher">
+                    <a href='#theme'>
+                        <div class='fa fa-paint-brush'></div>
+                        Theme 
+                         <label class="badge right switch">
+                          <input type="checkbox">
+                          <div class="slider"></div>
+                        </label>
+                    </a>
+                </li> 
+                <li id="font-size">
+                    <a href='#font-size">
+                        <div class='fa fa-font'></div>
+                        Font Size 
+                        <div class="badge right">100%</div>
+                    </a>
+                </li> 
                 <li>
                     <a href='#settings'>
                         Account
@@ -116,7 +123,7 @@
             <a href='#message'>
                 <div class='fa fa-question-circle'></div>
                 Help
-                <div class='fa fa-caret-down right'></div>
+                <div class='fa fa-caret-up right'></div>
             </a>
             <ul>
                 <li>
