--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </a>
                 </li> 
                 <li id="font-size">
-                    <a href='#font-size">
+                    <a href="#font-size">
                         <div class='fa fa-font'></div>
                         Font Size 
                         <div class="badge right">100%</div>
