--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             //I.net.add( new PouchDBMemory( ((PouchDB)=>new PouchDB('dbname', {adapter: 'memory'})) ) ); //MemDown
 
             //setTimeout(() => {
-            //me.mem.add(new SpimeDBMemory("http://localhost:8080"));
+            me.mem.add(new SpimeDBMemory("http://localhost:8080"));
             //me.mem.add(new PouchDBMemory(
             //"http://localhost:5984/doc"
             //"http://ana:5984/doc"
