--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
         LazyLoad.js([
             "netention.js",
+            "memory.webrtc.js",
             "memory.pouchdb.js",
             "memory.spimedb.js",
             "list.js",
@@ -186,6 +187,9 @@
 
 
             const me = window.I = new NClient({
+
+                I: uuid(), //TODO load from localStorage etc
+
                 //network: [
                 //  "localhost:8081"
                 //],
@@ -266,6 +270,7 @@
             //I.net.add( new PouchDBMemory( ((PouchDB)=>new PouchDB('dbname', {adapter: 'memory'})) ) ); //MemDown
 
             //setTimeout(() => {
+            me.mem.add(new WebRTCMemory());
             me.mem.add(new SpimeDBMemory("http://localhost:8080"));
             //me.mem.add(new PouchDBMemory(
             //"http://localhost:5984/doc"
